vcl: split asserts in VclBuilder::get() for fdo#85939

Change-Id: I41e9961ae797ac99fdfb1480e1a58dbe92178bb8