include/vcl/builder.hxx
@@ -404,7 +404,8 @@ inline T* VclBuilder::get(T*& ret, const OString& sID)
     SAL_WARN_IF(!w, "vcl.layout", "widget \"" << sID.getStr() << "\" not found in .ui");
     SAL_WARN_IF(!dynamic_cast<T*>(w),
        "vcl.layout", ".ui widget \"" << sID.getStr() << "\" needs to correspond to vcl type " << typeid(T).name());
-    assert(w && dynamic_cast<T*>(w));
+    assert(w);
+    assert(dynamic_cast<T*>(w));
     ret = static_cast<T*>(w);
     return ret;
 }
